--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "json-server": "^0.17.0",
+        "lodash.debounce": "^4.0.8",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.1",
