--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "json-server": "^0.17.0",
         "lodash.debounce": "^4.0.8",
         "react": "^18.1.0",
+        "react-content-loader": "^6.2.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.3.0",
