--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^28.1.3",
+        "@types/lodash.debounce": "^4.0.7",
+        "@types/node": "^18.0.0",
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.5",
         "axios": "^0.27.2",
         "json-server": "^0.17.0",
         "lodash.debounce": "^4.0.8",
@@ -19,6 +24,7 @@
         "redux": "^4.2.0",
         "redux-thunk": "^2.4.1",
         "sass": "^1.51.0",
+        "typescript": "^4.7.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
