--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^18.0.0",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
+        "ahooks": "^3.5.2",
         "axios": "^0.27.2",
         "json-server": "^0.17.0",
         "lodash.debounce": "^4.0.8",
